HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/RefinementPredicateNonBool/Expected.uv
//! Expected diagnostic metadata for the RefinementPredicateNonBool rejected-source specimen.

expectedDiagnostic("E-TYP-1955", "rule.14.WF-Refine-Type")
